# SyzScope

./: Dockerfile  LICENSE  README.md  crash.py  deploy.py  main.py  requirements.txt  success  syzbotCrawler.py  utilities.py
interface/: __init__.py  utilities.py
interface/s2e/: __init__.py
interface/static_analysis/: __init__.py  staticAnalysis.py
interface/sym_exec/: __init__.py  mem_instrument.py  symExec.py
patches/: kasan.patch  syzkaller-1e9788a.patch  syzkaller-2cad5aa.patch  syzkaller-4d4a442.patch  syzkaller-582e1f0.patch  syzkaller-5de425b.patch  syzkaller-85d2828.patch  syzkaller-95fe19c.patch  syzkaller-9b1f3e6.patch  syzkaller-b5df78d.patch  syzkaller-dbd627e.patch  syzkaller-e503f04.patch  syzkaller.patch  syzkaller_new.patch  syzkaller_old.patch
resources/: kasan_related_funcs
scripts/: check_kvm.sh  deploy-bc.sh  deploy-ori-linux.sh  deploy.sh  deploy_linux.sh  init-replay.sh  install.sh  linux-clone.sh  patch_applying_check.sh  requirements.sh  run-script.sh  run-vm.sh  syz-compile.sh  upload-exp.sh
syzbot_analyzer/: __main__.py
syzbot_analyzer/llvm_passes/: CMakeLists.txt
syzbot_analyzer/llvm_passes/generateInput/: CMakeLists.txt  InstHandler.h  Universal.h  generateInput.cpp
syzbot_analyzer/llvm_passes/intersyscallAnalysis/: intersyscallAnalysis.cpp
syzscope/: __main__.py
test/: deploy_test.py
tutorial/: Getting_started.md  common_issues.md  folder_structure.md  fuzzing.md  how_to_inspect_the_results.md  inspect_results.md  poc repro.md  poc_repro.md  static_taint_analysis.md  sym_exe.md  sym_exec.md  workzone_structure.md
(+80 files in other folders)
